<resources>
    <string name="app_name">My Simple Calculator</string>
    <string name="clear">Clear</string>
    <string name="bracket">( )</string>
    <string name="modulus">%</string>
    <string name="divides">/</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="del">Del</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="times">*</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="equal">=</string>
    <string name="_02">0</string>
    <string name="blink">|</string>
    <string name="abuka_21">Abuka 21</string>
    <string name="abuka_211">😉 Abuka-21 😉</string>
    <string name="times_btn">x</string>
</resources>